# chumak

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/chumak/: __init__.py  loader.py  meta.py  profile.py  response.py  surface.py
src/chumak/handlers/: __init__.py  base.py  langchain.py  subprocess.py  types.py
tests/: conftest.py  test_langchain_handler.py  test_langchain_live.py  test_loader.py  test_meta.py  test_profile.py  test_subprocess_handler.py  test_surface.py
